# quirrel

./: .gitignore  CMakeLists.txt  README.md  testRunner.py
.github/workflows/: docs_build_deploy.yaml
doc/repl/: CMakeLists.txt  native.cpp
doc/source/: conf.py  diff_from_original.rst  index.rst  introduction.rst  quirrel.py
include/: sqconfig.h  sqdirect.h  sqstdio.h  squirrel.h
scripts/samples/: ackermann.nut  class.nut  fibonacci.nut  flow.nut  generators.nut  list.nut  matrix.nut  metamethods.nut  methcall.nut  module_1.nut
sq/: CMakeLists.txt  sq.cpp
sqmodules/: CMakeLists.txt  deffileaccess.cpp  sqmodules.cpp  sqmodules.h  sqratLite.h
sqstdlib/: CMakeLists.txt  sqstdaux.cpp  sqstdblob.cpp  sqstdblobimpl.h  sqstddatetime.cpp  sqstddebug.cpp  sqstdhash.cpp  sqstdio.cpp  sqstdmath.cpp  sqstdrex.cpp  sqstdserialization.cpp  sqstdstream.cpp  sqstdstream.h  sqstdstring.cpp  sqstdsystem.cpp
squirrel/: CMakeLists.txt  opcodes.h  sqapi.cpp  sqarray.h  sqast.cpp  sqast.h  sqast_tree_dump.h  sqastcodegen.cpp  sqastcodegen.h  sqastparser.cpp  sqastparser.h  sqastrender.h  sqbaselib.cpp  sqbinaryast.cpp  sqbinaryast.h  sqclass.cpp  sqclass.h  sqcompilationcontext.cpp  sqcompilationcontext.h  sqcompiler.cpp  sqcompiler.h  sqdebug.cpp  sqdirect.cpp  sqext.cpp  sqfuncproto.h  sqfuncstate.cpp  sqfuncstate.h  sqlexer.cpp  sqlexer.h  sqobject.cpp  sqobject.h  sqopcodes.h  sqoptimizer.cpp  sqoptimizer.h  sqpcheader.h  sqstate.cpp  sqstate.h  sqstringlib.cpp  sqtable.cpp  sqtable.h  (+6 more)
squirrel/ast_tools/: ast_indent_render.h
squirrel/compiler/: CMakeLists.txt  arena.h  ast.cpp  ast.h  ast_dump.h  ast_indent_render.h  ast_render.h  codegen.cpp  codegen.h  compilationcontext.cpp  compilationcontext.h  compiler.cpp  compiler.h  constgen.cpp  constgen.h  lex_tokens.h  lexer.cpp  lexer.h  optimizer.cpp  parser.cpp  parser.h  sqfuncstate.cpp  sqfuncstate.h  sqtypeparser.cpp  sqtypeparser.h
squirrel/compiler/optimizations/: closureHoisting.cpp  closureHoisting.h
squirrel/compiler/static_analyzer/: analyzer.cpp  analyzer.h  analyzer_internal.h  assign_seq_terminator.h  ast_helpers.h  checker_visitor.cpp  checker_visitor.h  config.cpp  config.h  function_info.h  function_ret_type_eval.cpp  function_ret_type_eval.h  loop_terminator_collector.h  name_shadowing_checker.cpp  name_shadowing_checker.h  naming.cpp  naming.h  node_complexity_counter.h  node_diff_computer.h  node_equal_checker.h  operator_classification.h  symbol_info.h  value_ref.cpp  value_ref.h  var_scope.cpp  var_scope.h
squirrel/optimizations/: sqastevaluator.cpp  sqastevaluator.h
squirrel/static_analyser/: analyser.cpp  analyser.cpp.bak  analyser.h
squirrel/static_analyzer/: analyzer.cpp
static_analyzer/: compilation_context.cpp  quirrel_static_analyzer.cpp
testData/diagnostics/: delete_forbid_pragma.diag.txt  extends_kw_pragma.diag.txt  import_05.diag.txt  import_correct.nut  init_with_wrong_type.diag.txt  interp_str_wrong_tempalte.diag.txt  invalid_type_hint_3.diag.txt  type_hints_01.diag.txt  type_hints_02.diag.txt  type_hints_03.diag.txt  type_hints_04.diag.txt  type_hints_05.diag.txt  type_hints_06.diag.txt
testData/exec/: call_method.nut
testData/static_analyser/: 200_nullc.nut  function_rt_detect.diag.txt  function_rt_detect.nut  nullcheck_ternary.diag.txt  nullcheck_ternary.nut  w190.diag.txt  w190.nut  w200_stringconcat.diag.txt  w200_stringconcat.nut  w205-2.nut  w208_rec.nut  w217_break.diag.txt  w217_complex.diag.txt  w217_continue.diag.txt  w223_method_is.diag.txt  w224_then.nut  w227_let_init_fun.diag.txt  w248_eq_get.diag.txt  w248_evaled.diag.txt  w248_nullc_2.diag.txt  w248_nullc_3.nut  w250.diag.txt  w257.diag.txt  w258.nut  (+17 more)
(+193 files in other folders)
